manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
  selector:
    app: app-one
